File: components/nexus-repository-services/src/test/java/org/sonatype/virtualthread/UploadVirtualThreadTest.java